[package]
name = "protohackers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
captur = "0.1.0"
crossbeam = "0.8.2"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
is_prime = "2.0.9"
