[package]
name = "mitmaro-protohackers"
version = "0.1.0"
authors = ["Tim Oram <dev@mitmaro.ca>"]
edition = "2021"
license = "ISC"
description = "Solutions to the Protohackers challenge written in Rust"
repository = "https://github.com/MitMaro/protohackers"


[dependencies]
anyhow = "1.0.65"
captur = "0.1.0"
crossbeam = "0.8.2"
ctrlc = "3.2.3"
lazy_static = "1.4.0"
num = "0.4.0"
parking_lot = "0.12.1"
